# cmake-subdirectory-dependencies

./: CMakeLists.txt  Readme.md
A/: A.cpp  A.hpp  CMakeLists.txt
B/: B.cpp  B.hpp  CMakeLists.txt
